fix package creation

--- a/config
+++ b/config
@@ -6,6 +6,7 @@ RPORTS="git://github.com/eltanin-os/ports"
 ROOTDIR="/mnt/glacies"
 
 ##
+FETCH="curl -LO"
 COMPRESS="pigz -z"
 PKGSUF="pkg.tzz"
 TAR="pax -x ustar -w"
