Use new userspace

--- a/scripts/common/source.rc
+++ b/scripts/common/source.rc
@@ -12,30 +12,28 @@ cat <<EOF
 [deps]
 ncurses
 libedit
-libnl-tiny
 libressl
 libz
+tertium
 [all]
 bzip2
 ca-certificates
-cbase
+ccore
 curl
 dash
+ecore
 iproute2
 kmod
-lux
-m4
-make
 mandoc
+openssh
+pdlzip
 perp
 pigz
-pkgconf
 rc
 sdhcp
 sinit
 ubase
-utilchest
-wpa_supplicant
+venus
 EOF
 }
 
