--- a/scripts/compiler/ellcc.rc
+++ b/scripts/compiler/ellcc.rc
@@ -25,14 +25,15 @@ fn clr_mk_prepare {
 fn clr_mk_build {
 	@{ cd ellcc
 	./ellcc build }
-	@{ cd database
-	printf "version:git-a08910fc2cc739f631b75b2d09b8d72a0d64d285" > libc }
+	tmp=`{mktemp}
+	printf '# version: a08910fc2cc739f631b75b2d09b8d72a0d64d285\n' > $tmp
+	$SU mv $tmp $ROOTDBDIR/libc
 }
 
 fn clr_mk_install @{
 	cd ellcc
-	mkdir -p $"ROOTDIR/opt/ellcc
-	cp -R bin lib libecc $"ROOTDIR/opt/ellcc
-	ln -s ../opt/ellcc/bin/ecc   $"ROOTDIR/bin/cc
-	ln -s ../opt/ellcc/bin/ecc++ $"ROOTDIR/bin/c++
+	$SU mkdir -p $"ROOTDIR/opt/ellcc
+	$SU cp -R bin lib libecc $"ROOTDIR/opt/ellcc
+	$SU ln -s ../opt/ellcc/bin/ecc   $"ROOTDIR/bin/cc
+	$SU ln -s ../opt/ellcc/bin/ecc++ $"ROOTDIR/bin/c++
 }
