--- a/config.rc
+++ b/config.rc
@@ -13,6 +13,10 @@ CACHEDIR=''
 # WITHCOMP - Install compiler
 WITHCOMP=false
 
+# SETS:
+# base - Minimal base
+SETS=(base)
+
 # URL
 RPORTS=https://github.com/eltanin-os/ports
 KHEADS=https://github.com/sabotage-linux/kernel-headers
