--- a/root/etc/venus.conf
+++ b/root/etc/venus.conf
@@ -1,5 +1,5 @@
-extension=lz
-fetch=curl -#Lo
-root=/
-uncompress=lzip -dc
-url=http://downloads.eltan.in.net/repository/glacies
+fetch:curl -#Lo
+root:/
+safeurl:http://downloads.eltan.in.net/repository/glacies
+uncompress:lzip -dc
+url:http://downloads.eltan.in.net/repository/glacies
