--- a/workdir/root/etc/venus.conf
+++ b/workdir/root/etc/venus.conf
@@ -1,5 +1,5 @@
 fetch:curl -#Lo
 root:/
 safeurl:http://downloads.eltan.in.net/repository/glacies
-uncompress:lzip -dc
+uncompress:clzip -dc
 url:http://downloads.eltan.in.net/repository/glacies
