--- a/build.rc
+++ b/build.rc
@@ -66,8 +66,7 @@ pwd=`{pwd}
 destdir=$"pwd'/workdir'
 @{ cd workdir
 # ports
-cp -R /home/eadwardus/Workspace/EltaninOS/ports .
-#git clone 'https://git.tuxfamily.org/eltaninos/ports.git' # XXX
+git clone 'https://git.tuxfamily.org/eltaninos/ports.git'
 tmp=`{mktemp}
 sed -e 's;^AR=.*;AR=/ellcc/bin/ecc-ar;g' \
     -e 's;^CC=.*;CC=/ellcc/bin/ecc;g' \
@@ -78,16 +77,14 @@ mv $tmp ports/mk/config.rc
 # ellcc
 file='ellcc-'$"ARCH'-linux-2017-08-23.bz2'
 url='http://ellcc.org/releases/latest/'$"file
-cp /home/eadwardus/Workspace/TestZone/cache/$"file .
-# $FETCH $url # XXX
+$FETCH $url
 @{ $UNBZ2 $"file | $UNTAR } || true # false bzip2 error
 mkdir -p mnt/var/pkg/local
 dest='mnt/var/pkg/local/libc-dev'
 awk '{ print "version:" $2 "-" $1 }' ellcc/libecc/patches/musl.revision > $dest
 # root
 file='root-'$"ARCH'.tar.lz'
-cp /home/eadwardus/Workspace/TestZone/cache/$"file .
-#$FETCH 'https://downloads.eltan.in.net/files/root/'$"file # XXX
+$FETCH 'https://downloads.eltan.in.net/files/root/'$"file
 $UNLZ $file | $UNTAR
 mkdir -p etc/ssl/certs
 cp /etc/ssl/certs/ca-certificates.crt etc/ssl/certs }
@@ -101,7 +98,7 @@ rm -Rf $tmpdir
 
 msg building glacies
 @{ cd workdir
-mkdir dev proc sys
+mkdir dev proc sys tmp
 $SU mount -t proc none proc
 $SU mount -o bind /sys sys
 $SU mount -o bind /dev dev }
